Inserindo Hovers, ajustando visualizações, e corrigindo pequenos trechos de código

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body{
     width: 425px;
     font-family: 'roboto', sans-serif;
     letter-spacing: 2px;
-    background-color: black;
+        background-color: rgb(66, 2, 66);
 }
 
 
@@ -166,7 +166,7 @@ nav{
     color: white;
     position: absolute;
     top: 29%;
-    left: 30%;
+    left: 25%;
     right: 0%;
     bottom: 1%;
     width: 111px;
@@ -277,7 +277,7 @@ h2 {
 
 }
 
-button{
+.card-btn{
     display: flex;
     position: relative;
     flex-wrap: wrap;
@@ -292,7 +292,7 @@ button{
     cursor: pointer;
 }
 
-button a{
+.card-btn a{
     text-align: center;
     text-decoration: none;
     color: white;
@@ -311,7 +311,7 @@ footer{
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 500px;
+    height: 650px;
     background-color:rgb(66, 2, 66);
     padding: 10px 20px;
     gap: 5px;
@@ -365,6 +365,20 @@ footer img{
     justify-content: flex-start;
 }
 
+#aluno4{
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#aluno4 p{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
 #copyright{
     width: 100%;
     display: flex;
@@ -387,6 +401,7 @@ footer img{
         font-family: 'roboto', sans-serif;
         letter-spacing: 2px;
         overflow-x: hidden;
+        background-color: rgb(66, 2, 66);
     }
 
     header{
@@ -431,6 +446,11 @@ footer img{
         color: white;
         margin: 5px;
         text-decoration: none;
+        transition: .3s;
+    }
+
+    header a:hover{
+        transform: scale(.9);
     }
 
     header img{
@@ -476,6 +496,12 @@ footer img{
         opacity: 0.7;
         margin-top: 90px;
         border: 2px solid black;
+        transition: .3s;
+    }
+
+    .btn-banner:hover{
+        transform: scale(0.9);
+        color: red;
     }
 
     .container-ver-mais{
@@ -635,7 +661,12 @@ footer img{
         border-radius: 10px;
         box-shadow: 5px 5px 5px purple;
         margin: 20px 20px;
+        transition: .3s;
  
+    }
+
+    .cards:hover{
+        transform: scale(1.2);
     }
 
     h2 {
@@ -662,13 +693,13 @@ footer img{
         margin-top: 10px;
         padding: 10px 10px;
         background-color: rgb(0, 0, 0);
-        opacity: 0.5;
+        opacity: 0.6;
         color: white;
         border-radius: 10px;
         padding-bottom: 100px;
     }
 
-    button{
+    .card-btn{
         display: flex;
         position: relative;
         flex-wrap: wrap;
@@ -680,12 +711,17 @@ footer img{
         top: -70px;
         border-radius: 10px;
         opacity: 0.5;
-        background-color: black;
+        background-color: purple;
+        opacity: .5;
         color: white;
         cursor: pointer;
     }
 
-    button a{
+    .card-btn a:hover{
+        color: red;
+    }
+
+    .card-btn a{
         text-align: center;
         text-decoration: none;
         color: white;
@@ -704,7 +740,7 @@ footer img{
         justify-content: space-between;
         flex-wrap: wrap;
         width: 100%;
-        height: 350px;
+        height: 340px;
         background-color:rgb(66, 2, 66);
         padding: 40px 30px;
         gap: 5px;
@@ -748,6 +784,7 @@ footer img{
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-end;
+        padding-right: 10px;
     }
 
     #aluno3 p{
@@ -755,7 +792,27 @@ footer img{
         display: flex;
         justify-content: flex-end;
         text-align: right;
+        flex-wrap: wrap;
     }
+    
+    #aluno4{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        position: absolute;
+        left: 33.33%;
+        top: 2090px;
+    }
+    
+    #aluno4 p{
+        width: 100%;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+    
 
     #copyright{
         position: relative;
@@ -763,10 +820,9 @@ footer img{
         justify-content: center;
         align-items: center;
         text-align: center;
-        bottom: 20px;
+        bottom: -50px;
+        height: 0px;
         right: 825px;
-
-
     }
 
 
@@ -778,6 +834,7 @@ footer img{
             max-width: 3000px;
             font-family: 'roboto', sans-serif;
             letter-spacing: 2px;
+            overflow-x: hidden;
         }
 
         header{
@@ -795,6 +852,14 @@ footer img{
             display: inline-flex;
         }
 
+        nav{
+            display: none;
+        }
+
+        .nav-desktop{
+            display: flex;
+        }
+
         .nav-btn{
             display: inline-flex;
             justify-content: center;
@@ -804,6 +869,11 @@ footer img{
             width: 100px;
             height: 30px;
             font-size: 18px;
+            transition: .3s;
+        }
+
+        .nav-btn:hover{
+            color: red;
         }
 
         #color{
@@ -859,6 +929,12 @@ footer img{
             opacity: 0.7;
             margin-top: 90px;
             border: 2px solid black;
+            transition: .3s;
+        }
+
+        .btn-banner:hover{
+            transform: scale(0.9);
+            color: red;
         }
 
         .container-ver-mais{
@@ -965,11 +1041,17 @@ footer img{
             height: 36px;
             width: 175px;
             background-color: purple;
-            opacity: .9;
+            opacity: .7;
             color: white;
             margin-top: 17px;
             box-shadow: 0px 3px 2px purple;
             cursor: pointer;
+            transition: .3s;
+        }
+
+        .btn_Enviar:hover{
+            transform: scale(.9);
+            color: red;
         }
         /*Fim Modal*/
 
@@ -981,8 +1063,8 @@ footer img{
             font-size: 50px;
         }
 
-        main {
-            padding: 50px 0px;
+        main{
+            padding: 10px 0px;
             display: flex;
             flex-direction: column;
             height: 100%;
@@ -1005,146 +1087,183 @@ footer img{
             width: 100%;
             height: 100%;
             padding: 10px 0px;
+            padding-right: 45px;
         }
 
         .cards{
             display: flex;
             flex-wrap: wrap;
-            width: 700px;
+            width: 600px;
             height: 500px;
-            border: 1px solid whitesmoke;
-            margin-top: 20px;
             background-color: rgb(66, 2, 66);
-            border-radius: 10px;
+            border-radius: 25px;
             box-shadow: 5px 5px 5px purple;
-            margin-left: 30px;
+            margin-left: 20px;
+            transition: .3s;
         }
 
+        .cards:hover{
+            transform: scale(1.2);
+            z-index: 1;
+            padding-left: 5px;
+            box-shadow: 10px 10px 5px purple;;
+        }
+    
         h2 {
-            text-align: center;
-            padding-top:20px;
-        }
+        text-align: center;
+        padding-top:20px;
+    }
 
-        .card-content{
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            height: 300px;
-            color: Pink;
-        }
+    .card-content{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        color: Pink;
+    }
 
-        .card-text{
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            width: 680px;
-            height: 230px;
-            text-align: left;
-            margin-top: 10px;
-            padding: 10px 10px;
-            background-color: rgb(0, 0, 0);
-            opacity: 0.5;
-            color: white;
-            border-radius: 10px;
-            padding-bottom: 100px;
-        }
+    .card-text{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        width: 680px;
+        height: 230px;
+        text-align: left;
+        margin-top: 10px;
+        padding: 10px 10px;
+        background-color: rgb(0, 0, 0);
+        opacity: 0.5;
+        color: white;
+        border-radius: 10px;
+        padding-bottom: 100px;
+    }
 
-        button{
-            display: flex;
-            position: relative;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            width: 300px;
-            height: 50px;
-            top: -70px;
-            border-radius: 10px;
-            opacity: 0.5;
-            background-color: black;
-            color: white;
-            cursor: pointer;
-        }
+    .card-btn{
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 50px;
+        top: -70px;
+        border-radius: 10px;
+        opacity: 0.5;
+        background-color: black;
+        color: white;
+        cursor: pointer;
+        transition: .3s;
+    }
 
-        button a{
-            text-align: center;
-            text-decoration: none;
-            color: white;
-        }
+    .card-btn:hover{
+        color: red;
+        transform: scale(0.9);
+    }
 
-        .cards img{
-            display: flex;
-            width: 100%;
-            height: 200px;
-            border-radius: 10px;
-        }
+    .card-btn a{
+        text-align: center;
+        text-decoration: none;
+        color: white;
+    }
 
-        footer{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            width: 100vw;
-            height: 250px;
-            background-color:rgb(66, 2, 66);
-            padding: 40px 20px;
-            gap: 5px;
-            font-size: 14px;
-            color: pink;
+    .cards img{
+        display: flex;
+        width: 100%;
+        height: 200px;
+        border-radius: 10px;
+    }
 
-        }
-
-        footer img{
-            width: 30px;
-            border-radius: 100%;
-        }
-
-        #aluno1{
-            width: 33.33%;
-            gap: 10px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-        }
-
-        #aluno1 p{
-            width: 100%;
-            display: flex;
-            justify-content: flex-start;
-        }
-
-        #aluno2{
-            width: 33.33%;
-            gap: 10px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        #aluno2 p{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-
-        #aluno3{
-            width: 33.33%;
-            gap: 10px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-end;
-        }
-
-        #aluno3 p{
-            width: 100%;
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #copyright{
-            position: relative;
-            right: 1670px;
-            width: 100%;
-        }
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100vw;
+        height: 250px;
+        background-color:rgb(66, 2, 66);
+        padding: 40px 20px;
+        gap: 5px;
+        font-size: 14px;
+        color: pink;
 
     }
+
+    footer img{
+        width: 25px;
+        border-radius: 100%;
+    }
+
+    #aluno1{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    #aluno1 p{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    #aluno2{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #aluno2 p{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+
+    #aluno3{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        padding-right: 20px;
+        padding-right: 15px;
+    }
+
+    #aluno3 p{
+        text-align: right;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+
+    }
+
+    #aluno4{
+        width: 35%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        position: absolute;
+        left: 33.33%;
+        top: 2250px;
+    }
+    
+    #aluno4 p{
+        text-align: center;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #copyright{
+        position: relative;
+        text-align: center;
+        right: 1270px;
+        width: 100%;
+        top: 140px;
+    }
+}
